# tts-vue-next

./: .gitignore  .prettierrc.js  README.md  index.html  package.json  pnpm-lock.yaml  sync-ffmpeg-sidecar.mjs
.github/workflows/: build.yml  release.yml
cmd/: bin.js  builder-linux.json  builder-mac-arm64.json  builder.json
electron/: main.js
electron/config/: config.default.js  config.local.js
electron/controller/: edge.js  example.js  system.js
electron/preload/: bridge.js  index.js  lifecycle.js
electron/service/: example.js
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
public/html/: loading.html  view_example.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: ffmpeg.rs
src-tauri/src/commands/: audio.rs  file.rs  mod.rs  tts.rs  voices.rs
src-tauri/src/edge_tts/: communicate.rs  constants.rs  drm.rs  errors.rs  mod.rs  split_text.rs  ssml.rs  types.rs  voices.rs
src-tauri/src/utils/: retry.rs
src/constants/: project.ts
src/locales/: en.ts  zh.ts
src/plugins/: i18n.ts  vuetify.ts
src/router/: index.ts
src/stores/: batch.test.ts  batch.ts  settings.test.ts  settings.ts  tts.test.ts  tts.ts  voices.test.ts  voices.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: appLocale.ts  themeMode.test.ts  themeMode.ts
src/views/: BatchConvert.test.ts  BatchConvert.vue  Settings.test.ts  Settings.vue  TextToSpeech.vue
(+23 files in other folders)
